--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -4,7 +4,20 @@
 
 
 @layer components{
+    .ancestor-container{
+
+    }
+    .ancestor-container::-webkit-scrollbar{
+        width: 0px;
+    }
+
     .main-container{
-        @apply h-screen w-screen flex flex-col  items-center overflow-y-scroll
+        max-width: 768px; /* Tailwind max-w-xl equivalent */
+        padding: 16px;
+        @apply flex flex-col items-center w-screen h-screen; 
+    }
+    .blur-update-div{
+        backdrop-filter: blur(5px);
+        @apply h-full w-full absolute top-0
     }
 }
